--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,25 @@
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--font-inter);
+}
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #ffffff;
+}
+
+.font-great-vibes {
+  font-family: var(--font-great-vibes);
+}
+
+.font-ms-madi {
+  font-family: var(--font-ms-madi);
+}
+
+.font-style-script {
+  font-family: var(--font-style-script);
 }
